# ipwhois-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: basic.py  bulk.py  defaults.py
src/ipwhois/: __init__.py  client.py  ipwhois.py
tests/: test_client.py  test_ipwhois.py
