[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ipwhois-python"
version = "1.2.0"
description = "Official Python client for the ipwhois.io IP Geolocation API. Simple, dependency-free, supports single and bulk IP lookups."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = [
    "ipwhois",
    "ip-api",
    "ip-lookup",
    "ip-geolocation",
    "geolocation",
    "geoip",
    "ip-locator",
]
authors = [
    { name = "ipwhois.io" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage      = "https://ipwhois.io"
Documentation = "https://ipwhois.io/documentation"
Source        = "https://github.com/IPWhois/ipwhois-python"
Issues        = "https://github.com/IPWhois/ipwhois-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ipwhois"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/examples",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
minversion  = "7.0"
testpaths   = ["tests"]
addopts     = "-ra --strict-markers"
